Fix dark mode syntax error

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @import '../node_modules/tw-animate-css/dist/tw-animate.css';
 @plugin "@tailwindcss/typography";
 
-@variant dark { }
+@custom-variant dark (&);
 
 html, body, #root {
   color-scheme: light !important;
